added spring security and updated tests